kubedefs/dbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vprodb
  name: vprodb 
  namespace: default
  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vprodb
  
  template:
    metadata:
      labels:
        app: vprodb
    spec:
      volumes:
       - name: vpro-db-data
         persistentVolumeClaim:
           claimName: db-pv-claim
      containers:
      - image: vprocontainers/vprofiledb
        imagePullPolicy: Always
        name: vprodb
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: vpro-db-data
        ports:
        - name: vprodb-port
          containerPort: 3306
