kubedefs/rmqdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vpromq
  name: vpromq
  namespace: default
  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpromq
  
  template:
    metadata:
      labels:
        app: vpromq
    
    spec: 
      containers:
      - image: rabbitmq
        imagePullPolicy: Always
        name: vpromq
        
        ports:
        - name: vprormq-port
          containerPort: 5672
