kubedefs/dbservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprodb
spec:
  selector:
    app: vprodb
  ports:
  - protocol: TCP
    port: 3306
    targetPort: vprodb-port
  type: ClusterIP
